# adr-reviewer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_parser.py
.devcontainer/: Dockerfile  devcontainer.json
src/: main.py
src/madr_parser/: madr_labels.py  madr_parser.py
